--- a/Introdução_ao_python.ipynb
+++ b/Introdução_ao_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXOs8UwmMP9T0bYeGhoqNs",
+      "authorship_tag": "ABX9TyOZ+5B3Va2tk7fLDKsYu1pd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,6 +48,13 @@
       "source": [
         "print('oi')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "VL4NUigoQvIK"
+      }
     },
     {
       "cell_type": "markdown",
@@ -105,6 +112,71 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Desafio adicional: pontuação de Ana\n",
+        "No final da aula, um novo problema foi proposto a você:\n",
+        "\n",
+        "Ana, outra estudante dessa escola, participou da campanha e **leu dois livros de ficção e cinco livros infantis**. Para resolvê-lo, responda as seguintes perguntas programando em Python:\n",
+        "\n",
+        "\n",
+        "* Quantos pontos Ana acumulou ao final da leitura?\n",
+        "* Qual é o total de pontos acumulados por Rodrigo e Ana juntos?\n",
+        "\n",
+        "Utilize variáveis, soma e multiplicação para encontrar essas respostas. Organize seu código e utilize a função print para exibir os resultados de forma clara. Use f-strings para deixar a saída mais informativa.\n",
+        "\n",
+        "Pontos:\n",
+        "* livro_ficcao = 8\n",
+        "* livro_n_ficcao = 10\n",
+        "* livro_infantil = 6"
+      ],
+      "metadata": {
+        "id": "slxj5fqvQ94B"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Pontos\n",
+        "livro_ficcao = 8\n",
+        "livro_n_ficcao = 10\n",
+        "livro_infantil = 6\n",
+        "\n",
+        "#Ana\n",
+        "Pontos_A = (2*livro_ficcao) + (5*livro_infantil)\n",
+        "#Rodrigo\n",
+        "Prontos_R = livro_ficcao + livro_n_ficcao + livro_infantil\n",
+        "\n",
+        "print(f\"Resposta da pergunta 1: Ana acumulou ao final da leitura {Pontos_A} pontos\")\n",
+        "print(f\"Resposta da pergunta 2: total de pontos acumulados por Rodrigo e Ana juntos é {Prontos_R}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Pt6HC-NURuHY",
+        "outputId": "416d6ec9-982c-45be-d1b9-78038aed02dc"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Resposta da pergunta 1: Ana acumulou ao final da leitura 46 pontos\n",
+            "Resposta da pergunta 2: total de pontos acumulados por Rodrigo e Ana juntos é 24\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "oTpVmZ-ERGqZ"
+      }
     }
   ]
 }
