--- a/03_distribuindo_itens.ipynb
+++ b/03_distribuindo_itens.ipynb
@@ -96,16 +96,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tPh4AIBDuR6_",
-        "outputId": "fa8726c9-da0e-4551-d92f-0916ec854f29"
+        "outputId": "93951414-4f43-47e8-c0c1-d29a4c9c9e53"
       },
-      "execution_count": 8,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Quantas figurinhas extras?100\n",
-            "Nós temos 100 extras, se isso for dividido, cada pessoa vai ficar com 28 e joão no final vai ficar com 56.\n"
+            "Qual é a quantidade de figurinhas? 100\n",
+            "Qual é o número de amigos? 5\n",
+            "Quantas figurinhas extras? 100\n",
+            "Cada amigo vai ficar com 28 figurinhas e João vai ficar com 56 figurinhas.\n"
           ]
         }
       ]
