--- a/Calculando__a_capacidade.ipynb
+++ b/Calculando__a_capacidade.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNEgY+/LBUFcux8KZA6lipo",
+      "authorship_tag": "ABX9TyPpXrWQgNJ2vFkNYh0+WfFm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -128,7 +128,7 @@
         "id": "DxKKY8OvqNHV",
         "outputId": "d37a2715-00c5-4c0e-bf71-8b7ff7c69b38"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,6 +137,52 @@
             "Flae a quantidade de monitores8\n",
             "Fale a quantidade de alunos14\n",
             "pode ir\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Imagine que você está ajudando a organizar um evento em sua escola o qual possui 100 ingressos disponíveis para alunos, monitores e convidados. Para que tudo ocorra bem, é necessário garantir que o número total de pessoas não ultrapasse a quantidade de ingressos. Além disso, a direção da escola impôs uma regra: é permitido haver, no máximo, 20 convidados no total, mesmo que sobrem ingressos.\n",
+        "\n",
+        "Desse modo, crie um programa que leia a quantidade de alunos, monitores e convidados. Em seguida, o programa deve verificar se o total de pessoas pode ser acomodado dentro dos 100 ingressos disponíveis. O programa também deve verificar se o número de convidados está dentro do limite de 20. Por fim, deve exibir uma mensagem adequada para cada situação."
+      ],
+      "metadata": {
+        "id": "ogIO4SwKttq-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "monitores = int(input(\" Qual o número de monitores?\"))\n",
+        "convidados = int(input(\" Qual o número de convidados?\"))\n",
+        "\n",
+        "total = monitores + convidados\n",
+        "\n",
+        "if convidados > 20:\n",
+        "  print(f\"Não é permitido acima de 20 convidados, você tem: {convidados} \")\n",
+        "elif total > 100:\n",
+        "  print(f\"Não é permitido mais de 100 pessoas, você tem {convidados}\")\n",
+        "else:\n",
+        "  print(f\"O total de pessoas no teatro é {total}\")"
+      ],
+      "metadata": {
+        "id": "cq6IRQ8utveN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8056fcfd-16b2-4f3c-830e-d9de1b1773c2"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " Qual o número de monitores?50\n",
+            " Qual o número de convidados?20\n",
+            "O total de pessoas no teatro é 70\n"
           ]
         }
       ]
